Added HTML structure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,45 @@
 </head>
   <body>
     <div class="container">
-        
+      <div class="overview">
+        <h1 id="city">
+          Kyiv
+        </h1>
+        <div id="date">
+          Sunday, 6 September
+        </div>
+        <div id="current time">
+          08:35
+        </div> 
+        <div class="row">
+          <div class="col-6">
+            <div class="weather-discription">
+              <img src="" alt="Clear" id="icon"class="float-left">
+                <div class="float-left">
+                  Clear
+                </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="float-right">
+              <ul>
+                <li><strong id="temperature">20</strong><span class="units">  ̊C</span></li>
+                <li>Feels like: <span id="feels-temperature">20</span> ̊C</li>
+                <li>Humidity: <span id="humidity">50</span>%</li>
+                <li>Wind speed: <span id="wind">5</span> m/h</li>
+              </ul>
+            </div>
+          </div>  
+        </div>
+      </div>  
+     <small>
+      <a
+        href="https://github.com/OlenaMelnyk-010/weatherApp-project.git"
+        target="_blank"
+        >Open-source code</a
+      >
+      by Olena Melnyk
+      </small>
     </div>
     <script src="src/app.js"></script>  
   </body>
