--- a/index.html
+++ b/index.html
@@ -6,49 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="src/style.css">
+      <!--Fonts-->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@700&display=swap" rel="stylesheet">
+      <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
   <body>
     <div class="container">
-      <div class="overview">
-        <h1 id="city">
-          Kyiv
-        </h1>
-        <div id="date">
-          Sunday, 6 September
-        </div>
-        <div id="current time">
-          08:35
-        </div> 
-        <div class="row">
-          <div class="col-6">
-            <div class="weather-discription">
-              <img src="" alt="Clear" id="icon"class="float-left">
-                <div class="float-left">
-                  Clear
-                </div>
-            </div>
+      <div class="weather-wrapper">
+        <div class="overview">
+          <h1 id="city">
+            Dublin
+          </h1>
+          <div id="date">
+            Sunday, 6 September
           </div>
-          <div class="col-6">
-            <div class="float-right">
-              <ul>
-                <li><strong id="temperature">20</strong><span class="units">  ̊C</span></li>
-                <li>Feels like: <span id="feels-temperature">20</span> ̊C</li>
-                <li>Humidity: <span id="humidity">50</span>%</li>
-                <li>Wind speed: <span id="wind">5</span> m/h</li>
-              </ul>
+          <div id="current-time">
+            08:35
+          </div> 
+          <div class="row">
+            <div class="col-6">
+              <div class="weather-discription">
+                <img src="" alt="Clear" id="icon" class="d-flex weather-temperature" >
+                  <div class="float-left">
+                    Clear
+                  </div>
+              </div>
             </div>
-          </div>  
+            <div class="col-6">
+              <div class="float-right">
+                <ul>
+                  <li><strong id="temperature">20</strong><span class="units">  ̊C</span></li>
+                  <li>Feels like: <span id="feels-temperature">20</span> ̊C</li>
+                  <li>Humidity: <span id="humidity">50</span>%</li>
+                  <li>Wind speed: <span id="wind">5</span> m/h</li>
+                </ul>
+              </div>
+            </div>  
+          </div>
         </div>
+        <small>
+          <a
+            href="https://github.com/OlenaMelnyk-010/weatherApp-project.git"
+            target="_blank"
+            >Open-source code</a
+          >
+          by Olena Melnyk
+        </small>
       </div>  
-     <small>
-      <a
-        href="https://github.com/OlenaMelnyk-010/weatherApp-project.git"
-        target="_blank"
-        >Open-source code</a
-      >
-      by Olena Melnyk
-      </small>
+      
     </div>
     <script src="src/app.js"></script>  
   </body>
