--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="src/style.css">
-      <!--Fonts-->
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@700&display=swap" rel="stylesheet">
-      <!--Bootstrap CSS-->
+    <!--Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@700&display=swap" rel="stylesheet">
+    <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-</head>
+    <link rel="stylesheet" href="src/style.css">
+    <script src="https://kit.fontawesome.com/81df40c5c1.js" crossorigin="anonymous"></script>
+  </head>
   <body>
     <div class="container">
       <div class="weather-wrapper">
         <div class="overview">
           <h1 id="city">
-            Dublin
-          </h1>
+            Kyiv
+          </h1>   
           <div id="date">
             Sunday, 6 September
           </div>
@@ -29,25 +30,27 @@
           <div class="row">
             <div class="col-6">
               <div class="weather-discription">
-                <img src="" alt="Clear" id="icon" class="d-flex weather-temperature" >
-                  <div class="float-left">
-                    Clear
-                  </div>
+                <img src="src/snow2.png" id="icon" class="img-fluid"  alt="Responsive image">
               </div>
             </div>
             <div class="col-6">
-              <div class="float-right">
-                <ul>
-                  <li><strong id="temperature">20</strong><span class="units">  ̊C</span></li>
-                  <li>Feels like: <span id="feels-temperature">20</span> ̊C</li>
-                  <li>Humidity: <span id="humidity">50</span>%</li>
-                  <li>Wind speed: <span id="wind">5</span> m/h</li>
-                </ul>
+              <div class="weather-temperature">
+                <strong id="temperature">20</strong><span class="units">
+                 <a href="/" class="links btn active" role="button"> ̊C</a>
+                  | 
+                 <a href="/" class="links btn disable"> ̊F</a>
+                </span>
+                <span id="dissription-weather">Snow</span>
               </div>
+              <ul>
+                <li><i class="fa-solid fa-temperature-three-quarters"></i> Feels like: <span id="feels-temperature">20</span> ̊C</li>
+                <li><i class="fa-solid fa-droplet"></i> Humidity: <span id="humidity">50</span>%</li>
+                <li><i class="fa-solid fa-wind"></i> Wind speed: <span id="wind">5</span> m/h</li>
+              </ul> 
             </div>  
           </div>
         </div>
-        <small>
+        <small class="footer">
           <a
             href="https://github.com/OlenaMelnyk-010/weatherApp-project.git"
             target="_blank"
@@ -56,8 +59,7 @@
           by Olena Melnyk
         </small>
       </div>  
-      
     </div>
-    <script src="src/app.js"></script>  
+    <script src="src/app.js"></script>
   </body>
 </html> 
