--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- Axios -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    
+
     <link rel="stylesheet" href="src/style.css">
     <script src="https://kit.fontawesome.com/81df40c5c1.js" crossorigin="anonymous"></script>
   </head>
@@ -28,7 +28,7 @@
             Sunday, 6 September
           </div>
           <div id="current-time">
-            08:35
+            
           </div> 
           <div class="row">
             <div class="col-6">
@@ -38,17 +38,17 @@
             </div>
             <div class="col-6">
               <div class="weather-temperature">
-                <strong id="temperature">20</strong><span class="units">
+                <strong id="temperature"></strong><span class="units">
                  <a href="/" class="links btn active" role="button"> ̊C</a>
                   | 
                  <a href="/" class="links btn disable"> ̊F</a>
                 </span>
-                <span id="dissription-weather">Snow</span>
+                <span id="dissription-weather"></span>
               </div>
               <ul>
-                <li><i class="fa-solid fa-temperature-three-quarters"></i> Feels like: <span id="feels-temperature">20</span> ̊C</li>
-                <li><i class="fa-solid fa-droplet"></i> Humidity: <span id="humidity">50</span>%</li>
-                <li><i class="fa-solid fa-wind"></i> Wind speed: <span id="wind">5</span> m/h</li>
+                <li><i class="fa-solid fa-temperature-three-quarters"></i> Feels like: <span id="feels-temperature"></span> ̊C</li>
+                <li><i class="fa-solid fa-droplet"></i> Humidity: <span id="humidity"></span>%</li>
+                <li><i class="fa-solid fa-wind"></i> Wind speed: <span id="wind"></span> m/h</li>
               </ul> 
             </div>  
           </div>
