Added relevant icon

--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
             Sunday, 6 September
           </div>
           <div id="current-time">
-            
           </div> 
+          <br />
           <div class="row">
             <div class="col-6">
               <div class="weather-discription">
-                <img src="src/snow2.png" id="icon" class="img-fluid"  alt="Responsive image">
+                <img src="" 
+                      id="icon"
+                      class="img-fluid"
+                      alt="Responsive image">
+                <span id="dissription-weather"></span>
               </div>
             </div>
             <div class="col-6">
@@ -43,13 +47,12 @@
                   | 
                  <a href="/" class="links btn disable"> ̊F</a>
                 </span>
-                <span id="dissription-weather"></span>
-              </div>
-              <ul>
-                <li><i class="fa-solid fa-temperature-three-quarters"></i> Feels like: <span id="feels-temperature"></span> ̊C</li>
-                <li><i class="fa-solid fa-droplet"></i> Humidity: <span id="humidity"></span>%</li>
-                <li><i class="fa-solid fa-wind"></i> Wind speed: <span id="wind"></span> m/h</li>
-              </ul> 
+                <ul>
+                  <li><i class="fa-solid fa-temperature-three-quarters"></i> Feels like: <span id="feels-temperature"></span> ̊C</li>
+                  <li><i class="fa-solid fa-droplet"></i> Humidity: <span id="humidity"></span>%</li>
+                  <li><i class="fa-solid fa-wind"></i> Wind speed: <span id="wind"></span> m/h</li>
+                </ul> 
+            </div>
             </div>  
           </div>
         </div>
