--- a/index.html
+++ b/index.html
@@ -21,22 +21,41 @@
     <div class="container">
       <div class="weather-wrapper">
         <div class="overview">
-          <h1 id="city">
-            Kyiv
-          </h1>   
-          <div id="date">
-            Sunday, 6 September
+          <div class="search-city">
+            <form id="search-form" class="mb-3">
+              <div class="row">
+                <div class="col-9">
+                  <input 
+                    type="search" 
+                    class="form-control" 
+                    placeholder="Enter a city.."
+                    id = "city-input"
+                    autocomplete="off"
+                  />
+                </div>
+                <div class="col-3">
+                  <button 
+                    type="submit" 
+                    class="btn btn-primary">Sesrch
+                  </button>
+               </div>
+              </div> 
+            </form>
           </div>
-          <div id="current-time">
-          </div> 
+        <div class="city-info">
+          <h1 id="city"></h1>   
+          <div id="date"></div>
+          <div id="current-time"></div> 
           <br />
+        </div> 
           <div class="row">
             <div class="col-6">
               <div class="weather-discription">
                 <img src="" 
                       id="icon"
                       class="img-fluid"
-                      alt="Responsive image">
+                      alt="Responsive image"
+                  >
                 <span id="dissription-weather"></span>
               </div>
             </div>
