--- a/index.html
+++ b/index.html
@@ -62,9 +62,14 @@
             <div class="col-6">
               <div class="weather-temperature">
                 <strong id="temperature"></strong><span class="units">
-                 <a href="/" class="links btn active" role="button"> ̊C</a>
+                 <a href="#"  
+                    role="button"
+                    class="active"
+                    id="celsius-link"> ̊C</a>
                   | 
-                 <a href="/" class="links btn disable"> ̊F</a>
+                 <a href="#" 
+                   
+                    id="fahrenheit-link"> ̊F</a>
                 </span>
                 <ul>
                   <li><i class="fa-solid fa-temperature-three-quarters"></i> Feels like: <span id="feels-temperature"></span> ̊C</li>
