--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
              </div>
             </div> 
           </div> 
-            <div class="weather-forecast">
+            <div class="weather-forecast"
+                 id="forecast">
               <div class="row">
                 <div class="col-2 forecast-day">
                   <div class="weather-forecast-date">
